<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_post"
        android:tint="#13000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:contentDescription="@null"
                android:src="@drawable/icon_logo" />

            <LinearLayout
                android:id="@+id/log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/logo"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/icon_user"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:hint="@string/usr_name"
                        android:inputType="textPersonName"
                        android:textColor="#000"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_text"
                        android:drawableLeft="@drawable/icon_password"
                        android:ems="10"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#000"
                        android:textSize="25sp" />
                    <!--android:digits="0123456789"-->
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/log_in"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btn_log_in"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/bg_log_in"
                        android:gravity="center"
                        android:text="@string/log_in"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/btn_sign_up"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/bg_sign_up"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/txt_welcome"
                    android:textColor="#000000" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
